--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,5 @@
-.commonRules{border:2px solid #008000;webkit-border-radius:10px;border-radius:10px}header p:before{content:"My "}li{color:#00f;border:2px solid #008000;border:2px solid #008000;webkit-border-radius:10px;border-radius:10px}h2{color:#008000;border:2px solid #008000;webkit-border-radius:10px;border-radius:10px}
-/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
+.redirectIcon {
+  height: 20px;
+  width: 20px;
+}
+
