--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,2 @@
-.redirectIcon {
-  height: 20px;
-  width: 20px;
-}
-
+.alignCenter{text-align:center}@media (min-width: 768px){.alignCenter{ text-align:left}}.redirectIcon{height:30px;width:30px;margin-bottom:10px}.navLinks{background-color:#000;color:#fff}.borderX{border:10px solid;border-color:#000}#navTextLeft{font-size:40px}
+/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
